k8s/apps/immich/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - photos2.tdude.co
    secretName: photos2-tdude-co-tls
  rules:
  - host: photos2.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich
            port:
              name: http
